force-app/main/default/objects/departures_dates__c/departures_dates__c.object-meta.xml
<CustomObject>
    <label>departures dates</label>
    <nameField>
        <label>id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>departures dates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>