force-app/main/default/objects/departures_dates__c/fields/Airline__c.field-meta.xml
<CustomField>
    <fullName>Airline__c</fullName>
    <label>Airline</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Flight_Ticketing_Structure__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Qantas</fullName>
            </value>
            <value>
                <fullName>Jetstar</fullName>
            </value>
            <value>
                <fullName>Sri Lankan Airlines</fullName>
            </value>
            <value>
                <fullName>Korean Air</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>