force-app/main/default/objects/departures_dates__c/fields/allocated__c.field-meta.xml
<CustomField>
    <fullName>allocated__c</fullName>
    <label>ALLOCATED (Allocation Secured)</label>
    <summarizedField>order__c.qty__c</summarizedField>
    <summaryFilterItems>
        <field>order__c.allocation_status__c</field>
        <operation>equals</operation>
        <value>Secured</value>
    </summaryFilterItems>
    <summaryForeignKey>order__c.departures_dates__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>