force-app/main/default/objects/departures_dates__c/fields/allocation__c.field-meta.xml
<CustomField>
    <fullName>allocation__c</fullName>
    <label>TOTAL v2 ALLOCATION</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>