force-app/main/default/objects/departures_dates__c/fields/Allocation_Table__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Table__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Allocation Table</label>
    <referenceTo>Allocation__c</referenceTo>
    <relationshipLabel>departures dates</relationshipLabel>
    <relationshipName>departures_dates</relationshipName>
    <type>Lookup</type>
</CustomField>