force-app/main/default/objects/departures_dates__c/fields/approve_zero_hss__c.field-meta.xml
<CustomField>
    <fullName>approve_zero_hss__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approve Zero HSS</label>
    <type>Checkbox</type>
</CustomField>