force-app/main/default/objects/departures_dates__c/fields/Approved_to_Run_Under_Mins__c.field-meta.xml
<CustomField>
    <fullName>Approved_to_Run_Under_Mins__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Flight Ticketing team use - can be checked as true if approval received by BDM/Merchant to go ahead with ticketing if mins not yet met</description>
    <inlineHelpText>Check this as true if approval received to run under min numbers</inlineHelpText>
    <label>Approved to Run Under Mins?</label>
    <type>Checkbox</type>
</CustomField>