force-app/main/default/objects/departures_dates__c/fields/assigned_user_agent__c.field-meta.xml
<CustomField>
    <fullName>assigned_user_agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned User Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>departures_dates</relationshipName>
    <type>Lookup</type>
</CustomField>