force-app/main/default/objects/departures_dates__c/fields/AVAILABLE__c.field-meta.xml
<CustomField>
    <fullName>AVAILABLE__c</fullName>
    <formula>Remaining_Allocation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AVAILABLE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>