force-app/main/default/objects/departures_dates__c/fields/Avg_Flight_Cost_P_P__c.field-meta.xml
<CustomField>
    <fullName>Avg_Flight_Cost_P_P__c</fullName>
    <formula>IF(Ticketed_Flights_Cost__c &gt; 0 ,(Ticketed_Flights_Cost__c /  Flights_Ticketed__c),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avg Flight Cost P/P</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>