force-app/main/default/objects/departures_dates__c/fields/BC_Due__c.field-meta.xml
<CustomField>
    <fullName>BC_Due__c</fullName>
    <formula>IF(date__c&gt; DATE(2100,01,01) , date__c, IF (
(ISBLANK( BC_Due_Extension__c )),

IF (
(ISBLANK( Deal_for_Reporting__r.merchant_sharing_deadline_date__c )),
(date__c - Deal_for_Reporting__r.merchant_sharing_deadline__c ),
Deal_for_Reporting__r.merchant_sharing_deadline_date__c
),BC_Due_Extension__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of days prior to departure that merchant will receive booking confirmation. If multi-merchant deal, please use the most restrictive deadline e.g 120 days instead of 90.</inlineHelpText>
    <label>BC Due</label>
    <type>Date</type>
</CustomField>