force-app/main/default/objects/departures_dates__c/fields/BC_Due_Extension__c.field-meta.xml
<CustomField>
    <fullName>BC_Due_Extension__c</fullName>
    <label>BC Due Extension</label>
    <type>Date</type>
</CustomField>