force-app/main/default/objects/departures_dates__c/fields/BC_Good_to_Send__c.field-meta.xml
<CustomField>
    <fullName>BC_Good_to_Send__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BC Sent by Logistics</label>
    <type>Checkbox</type>
</CustomField>