force-app/main/default/objects/departures_dates__c/fields/BC_s_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>BC_s_Outstanding__c</fullName>
    <label>BC&apos;s Outstanding</label>
    <summaryFilterItems>
        <field>order__c.BC_Sent__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>order__c.order_status__c</field>
        <operation>notEqual</operation>
        <value>On Hold, Cancelled, Expired</value>
    </summaryFilterItems>
    <summaryForeignKey>order__c.departures_dates__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>