force-app/main/default/objects/departures_dates__c/fields/BC_same_as_Departure__c.field-meta.xml
<CustomField>
    <fullName>BC_same_as_Departure__c</fullName>
    <formula>BC_Due__c = date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BC same as Departure</label>
    <type>Checkbox</type>
</CustomField>