force-app/main/default/objects/departures_dates__c/fields/BDM__c.field-meta.xml
<CustomField>
    <fullName>BDM__c</fullName>
    <formula>TEXT(Deal_for_Reporting__r.BDM__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BDM</label>
    <type>Text</type>
</CustomField>