force-app/main/default/objects/departures_dates__c/fields/BDM_email__c.field-meta.xml
<CustomField>
    <fullName>BDM_email__c</fullName>
    <label>BDM email</label>
    <type>Email</type>
</CustomField>