force-app/main/default/objects/departures_dates__c/fields/Bed_Nights__c.field-meta.xml
<CustomField>
    <fullName>Bed_Nights__c</fullName>
    <formula>Total_soldhold__c * Nights__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bed Nights</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>