force-app/main/default/objects/departures_dates__c/fields/BOOK_BY__c.field-meta.xml
<CustomField>
    <fullName>BOOK_BY__c</fullName>
    <formula>IF( NOT(ISBLANK( Deal__c )) , Deal__r.Book_By__c  , IF(NOT(ISBLANK( DealID_from_Option__c )),  options__r.Deal__r.Book_By__c  ,  sub_options__r.options__r.Deal__r.Book_By__c  ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BOOK BY</label>
    <type>Date</type>
</CustomField>