force-app/main/default/objects/departures_dates__c/fields/Booking_Limit__c.field-meta.xml
<CustomField>
    <fullName>Booking_Limit__c</fullName>
    <label>Booking Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>