force-app/main/default/objects/departures_dates__c/fields/Bookings_Confirmed_with_Merchant__c.field-meta.xml
<CustomField>
    <fullName>Bookings_Confirmed_with_Merchant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Logistics will tick this box to allow them to report on when they have received confirmation dates or not</description>
    <label>Bookings Confirmed with Merchant</label>
    <type>Checkbox</type>
</CustomField>