force-app/main/default/objects/departures_dates__c/fields/Close_Arrival__c.field-meta.xml
<CustomField>
    <fullName>Close_Arrival__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Close Arrival</label>
    <type>Checkbox</type>
</CustomField>