force-app/main/default/objects/departures_dates__c/fields/Close_Departure__c.field-meta.xml
<CustomField>
    <fullName>Close_Departure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Close Departure</label>
    <type>Checkbox</type>
</CustomField>