force-app/main/default/objects/departures_dates__c/fields/Closest_Partner_Sharing_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Closest_Partner_Sharing_Deadline__c</fullName>
    <formula>date__c -  Linked_Deal_D_O_S__r.Closest_Partner_Sharing_Deadline__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closest Partner Sharing Deadline</label>
    <type>Date</type>
</CustomField>