force-app/main/default/objects/departures_dates__c/fields/create_days__c.field-meta.xml
<CustomField>
    <fullName>create_days__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Days</label>
    <type>Checkbox</type>
</CustomField>