force-app/main/default/objects/departures_dates__c/fields/Create_Days_POE__c.field-meta.xml
<CustomField>
    <fullName>Create_Days_POE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Days POE</label>
    <type>Checkbox</type>
</CustomField>