force-app/main/default/objects/departures_dates__c/fields/Create_OLI_Itineries__c.field-meta.xml
<CustomField>
    <fullName>Create_OLI_Itineries__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create OLI Itineries</label>
    <type>Checkbox</type>
</CustomField>