force-app/main/default/objects/departures_dates__c/fields/create_sabre_profiles__c.field-meta.xml
<CustomField>
    <fullName>create_sabre_profiles__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Sabre Profiles</label>
    <type>Checkbox</type>
</CustomField>