force-app/main/default/objects/departures_dates__c/fields/create_sabre_profiles_date__c.field-meta.xml
<CustomField>
    <fullName>create_sabre_profiles_date__c</fullName>
    <label>Create Sabre Profiles Date</label>
    <type>Date</type>
</CustomField>