force-app/main/default/objects/departures_dates__c/fields/create_travel_documentation_poe__c.field-meta.xml
<CustomField>
    <fullName>create_travel_documentation_poe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Travel Documentation POE</label>
    <type>Checkbox</type>
</CustomField>