force-app/main/default/objects/departures_dates__c/fields/Cruise__c.field-meta.xml
<CustomField>
    <fullName>Cruise__c</fullName>
    <formula>OR(INCLUDES(Deal__r.deal_type__c,&apos;cruise&apos;), INCLUDES( options__r.Deal__r.deal_type__c ,&apos;cruise&apos;) ,INCLUDES( sub_options__r.options__r.Deal__r.deal_type__c ,&apos;cruise&apos;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cruise</label>
    <type>Checkbox</type>
</CustomField>