force-app/main/default/objects/departures_dates__c/fields/date_notes__c.field-meta.xml
<CustomField>
    <fullName>date_notes__c</fullName>
    <label>Date Notes</label>
    <type>TextArea</type>
</CustomField>