force-app/main/default/objects/departures_dates__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Deal</label>
    <referenceTo>Deal__c</referenceTo>
    <relationshipLabel>departures dates</relationshipLabel>
    <relationshipName>departures_dates</relationshipName>
    <type>Lookup</type>
</CustomField>