force-app/main/default/objects/departures_dates__c/fields/Deal_BDM__c.field-meta.xml
<CustomField>
    <fullName>Deal_BDM__c</fullName>
    <formula>Deal_for_Reporting__r.Deal_BDM__r.FirstName +&apos; &apos; +Deal_for_Reporting__r.Deal_BDM__r.LastName</formula>
    <label>Deal BDM</label>
    <type>Text</type>
</CustomField>