force-app/main/default/objects/departures_dates__c/fields/Deal_D_O_S__c.field-meta.xml
<CustomField>
    <fullName>Deal_D_O_S__c</fullName>
    <formula>IF( NOT(ISBLANK( Deal__c )) , Deal__r.Name  ,  IF(NOT(ISBLANK(   DealID_from_Option__c  )), DealID_from_Option__c,  DealID_from_Sub_Option__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal(D/O/S)</label>
    <type>Text</type>
</CustomField>