force-app/main/default/objects/departures_dates__c/fields/Deal_for_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Deal_for_Reporting__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Deal for Reporting</label>
    <referenceTo>Deal__c</referenceTo>
    <relationshipLabel>departures dates (Deal for Reporting)</relationshipLabel>
    <relationshipName>departures_dates1</relationshipName>
    <type>Lookup</type>
</CustomField>