force-app/main/default/objects/departures_dates__c/fields/Deal_Status__c.field-meta.xml
<CustomField>
    <fullName>Deal_Status__c</fullName>
    <formula>IF( NOT(ISBLANK( Deal__c )) ,  TEXT(Deal__r.Status__c)  , IF(NOT(ISBLANK( DealID_from_Option__c )), TEXT(options__r.Deal__r.Status__c) ,  TEXT(sub_options__r.options__r.Deal__r.Status__c ) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Status</label>
    <type>Text</type>
</CustomField>