force-app/main/default/objects/departures_dates__c/fields/Deal_Title__c.field-meta.xml
<CustomField>
    <fullName>Deal_Title__c</fullName>
    <formula>IF( NOT(ISBLANK( Deal__c )) ,  Deal__r.Deal_ID_Title__c   , IF(NOT(ISBLANK( DealID_from_Option__c )), options__r.Deal__r.Deal_ID_Title__c ,  sub_options__r.options__r.Deal__r.Deal_ID_Title__c  ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal + Title</label>
    <type>Text</type>
</CustomField>