force-app/main/default/objects/departures_dates__c/fields/DealId_D_O_S__c.field-meta.xml
<CustomField>
    <fullName>DealId_D_O_S__c</fullName>
    <formula>IF( NOT(ISBLANK( Deal__c )) , Deal__r.Id , IF(NOT(ISBLANK( DealID_from_Option__c )),  options__r.Deal__r.Id  ,  sub_options__r.options__r.Deal__r.Id  ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DealId(D/O/S)</label>
    <type>Text</type>
</CustomField>