force-app/main/default/objects/departures_dates__c/fields/DealID_from_Sub_Option__c.field-meta.xml
<CustomField>
    <fullName>DealID_from_Sub_Option__c</fullName>
    <formula>sub_options__r.options__r.Deal__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DealID from Sub Option</label>
    <type>Text</type>
</CustomField>