force-app/main/default/objects/departures_dates__c/fields/Delete_Travefy_Docs_POE__c.field-meta.xml
<CustomField>
    <fullName>Delete_Travefy_Docs_POE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delete Travefy Docs POE</label>
    <type>Checkbox</type>
</CustomField>