force-app/main/default/objects/departures_dates__c/fields/Departure_Date_Finalised__c.field-meta.xml
<CustomField>
    <fullName>Departure_Date_Finalised__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Departure Date Finalised?</label>
    <type>Checkbox</type>
</CustomField>