force-app/main/default/objects/departures_dates__c/fields/Departure_Date_Offline__c.field-meta.xml
<CustomField>
    <fullName>Departure_Date_Offline__c</fullName>
    <formula>If( Week_prior_BC_due__c &gt;Flight_Book_By__c,Flight_Book_By__c, Week_prior_BC_due__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Departure Date Offline</label>
    <type>Date</type>
</CustomField>