force-app/main/default/objects/departures_dates__c/fields/END_DATE__c.field-meta.xml
<CustomField>
    <fullName>END_DATE__c</fullName>
    <formula>IF( NOT(ISBLANK( Deal__c )) ,  Deal__r.Real_End_Date__c  , IF(NOT(ISBLANK( DealID_from_Option__c )),  options__r.Deal__r.Real_End_Date__c  ,  sub_options__r.options__r.Deal__r.Real_End_Date__c  ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>END DATE</label>
    <type>Date</type>
</CustomField>