force-app/main/default/objects/departures_dates__c/fields/filter_label__c.field-meta.xml
<CustomField>
    <fullName>filter_label__c</fullName>
    <label>Filter Label</label>
    <length>25</length>
    <type>Text</type>
</CustomField>