force-app/main/default/objects/departures_dates__c/fields/filter_travefy_doc_creation__c.field-meta.xml
<CustomField>
    <fullName>filter_travefy_doc_creation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Filter Travefy Doc Creation</label>
    <type>Checkbox</type>
</CustomField>