force-app/main/default/objects/departures_dates__c/fields/finalise_date__c.field-meta.xml
<CustomField>
    <fullName>finalise_date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Finalise Date</label>
    <type>Checkbox</type>
</CustomField>