force-app/main/default/objects/departures_dates__c/fields/Flight_Book_By__c.field-meta.xml
<CustomField>
    <fullName>Flight_Book_By__c</fullName>
    <formula>IF(ISBLANK(Flight_book_by_extension__c), date__c - Deal_for_Reporting__r.Flight_Book_By__c, Flight_book_by_extension__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flight Book By</label>
    <type>Date</type>
</CustomField>