force-app/main/default/objects/departures_dates__c/fields/Flight_Schedule_Change__c.field-meta.xml
<CustomField>
    <fullName>Flight_Schedule_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flight Schedule Change</description>
    <label>Flight Schedule Change</label>
    <type>Checkbox</type>
</CustomField>