force-app/main/default/objects/departures_dates__c/fields/Flight_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Flight_Surcharge__c</fullName>
    <label>Flight Surcharge</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>