force-app/main/default/objects/departures_dates__c/fields/Flight_Ticketing_Structure__c.field-meta.xml
<CustomField>
    <fullName>Flight_Ticketing_Structure__c</fullName>
    <label>Flight Ticketing Structure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
            <value>
                <fullName>FIT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>