force-app/main/default/objects/departures_dates__c/fields/Flight_Ticketing_Updated_Manually__c.field-meta.xml
<CustomField>
    <fullName>Flight_Ticketing_Updated_Manually__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flight Ticketing Updated Manually</label>
    <type>Checkbox</type>
</CustomField>