force-app/main/default/objects/departures_dates__c/fields/Flights_Ticketed__c.field-meta.xml
<CustomField>
    <fullName>Flights_Ticketed__c</fullName>
    <label>Flights Ticketed</label>
    <summarizedField>order__c.qty__c</summarizedField>
    <summaryFilterItems>
        <field>order__c.Flights_Ticketed__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>order__c.order_status__c</field>
        <operation>equals</operation>
        <value>Confirmed, Ready For Export, Exported</value>
    </summaryFilterItems>
    <summaryForeignKey>order__c.departures_dates__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>