force-app/main/default/objects/departures_dates__c/fields/FY20__c.field-meta.xml
<CustomField>
    <fullName>FY20__c</fullName>
    <formula>IF( FY__c = TEXT(2020) ,  Remaining_Allocation__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FY20</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>