force-app/main/default/objects/departures_dates__c/fields/FY__c.field-meta.xml
<CustomField>
    <fullName>FY__c</fullName>
    <formula>IF(
MONTH( date__c )&gt;=7,
TEXT(Year( date__c )+1),
TEXT(Year( date__c ))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FY</label>
    <type>Text</type>
</CustomField>