force-app/main/default/objects/departures_dates__c/fields/Group_ID__c.field-meta.xml
<CustomField>
    <fullName>Group_ID__c</fullName>
    <description>Allows Flight Ticketers to add Group PNR for UL deals</description>
    <label>Group ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>