force-app/main/default/objects/departures_dates__c/fields/group_invoice_number__c.field-meta.xml
<CustomField>
    <fullName>group_invoice_number__c</fullName>
    <label>Group Invoice Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>