force-app/main/default/objects/departures_dates__c/fields/group_status__c.field-meta.xml
<CustomField>
    <fullName>group_status__c</fullName>
    <label>Group Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INVOICED</fullName>
            </value>
            <value>
                <fullName>AWAITING NAME CONF</fullName>
            </value>
            <value>
                <fullName>AWAITING E-TICKETS</fullName>
            </value>
            <value>
                <fullName>AWAITING TAD PAYMENT</fullName>
            </value>
            <value>
                <fullName>AWAITING QUOTE ACCEPT</fullName>
            </value>
            <value>
                <fullName>PAID</fullName>
            </value>
            <value>
                <fullName>INVOICE REQUESTED</fullName>
            </value>
            <value>
                <fullName>CANCEL</fullName>
            </value>
            <value>
                <fullName>REQUEST INVOICE</fullName>
            </value>
            <value>
                <fullName>AWAITING DATE CONF</fullName>
            </value>
            <value>
                <fullName>TICKETED</fullName>
            </value>
            <value>
                <fullName>CANCELLED</fullName>
            </value>
            <value>
                <fullName>DEPOSIT PAID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>