force-app/main/default/objects/departures_dates__c/fields/has_dep_date_passed__c.field-meta.xml
<CustomField>
    <fullName>has_dep_date_passed__c</fullName>
    <formula>TODAY()  &gt;  date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Dep Date passed?</label>
    <type>Checkbox</type>
</CustomField>