force-app/main/default/objects/departures_dates__c/fields/has_departure_date_passed__c.field-meta.xml
<CustomField>
    <fullName>has_departure_date_passed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Departure Date passed?</label>
    <type>Checkbox</type>
</CustomField>