force-app/main/default/objects/departures_dates__c/fields/HSS_amount__c.field-meta.xml
<CustomField>
    <fullName>HSS_amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>HSS amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>