force-app/main/default/objects/departures_dates__c/fields/HSS_amount_nz__c.field-meta.xml
<CustomField>
    <fullName>HSS_amount_nz__c</fullName>
    <defaultValue>0</defaultValue>
    <label>HSS_Amount - NZ</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>