force-app/main/default/objects/departures_dates__c/fields/HSS_Cost_Currency__c.field-meta.xml
<CustomField>
    <fullName>HSS_Cost_Currency__c</fullName>
    <label>HSS Cost Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currencies</valueSetName>
    </valueSet>
</CustomField>