force-app/main/default/objects/departures_dates__c/fields/HSS_Flight_nz__c.field-meta.xml
<CustomField>
    <fullName>HSS_Flight_nz__c</fullName>
    <label>HSS - Flight - NZD</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>