force-app/main/default/objects/departures_dates__c/fields/HSS_Gross_Cost__c.field-meta.xml
<CustomField>
    <fullName>HSS_Gross_Cost__c</fullName>
    <label>HSS Gross Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>