force-app/main/default/objects/departures_dates__c/fields/HSS_Land__c.field-meta.xml
<CustomField>
    <fullName>HSS_Land__c</fullName>
    <label>HSS - Land</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>