force-app/main/default/objects/departures_dates__c/fields/HSS_Land_nz__c.field-meta.xml
<CustomField>
    <fullName>HSS_Land_nz__c</fullName>
    <defaultValue>0</defaultValue>
    <label>HSS - Land - NZD</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>