force-app/main/default/objects/departures_dates__c/fields/HSS_nz__c.field-meta.xml
<CustomField>
    <fullName>HSS_nz__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HSS - NZ</label>
    <type>Checkbox</type>
</CustomField>