force-app/main/default/objects/departures_dates__c/fields/Is_Wrong_allocation__c.field-meta.xml
<CustomField>
    <fullName>Is_Wrong_allocation__c</fullName>
    <formula>date__c  &lt;&gt;  Allocation_Table__r.departure_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Wrong allocation</label>
    <type>Checkbox</type>
</CustomField>