force-app/main/default/objects/departures_dates__c/fields/kerokuid__c.field-meta.xml
<CustomField>
    <fullName>kerokuid__c</fullName>
    <label>kerokuid</label>
    <length>10</length>
    <type>Text</type>
</CustomField>