force-app/main/default/objects/departures_dates__c/fields/Linked_Deal_D_O_S__c.field-meta.xml
<CustomField>
    <fullName>Linked_Deal_D_O_S__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked Deal(D/O/S)</label>
    <referenceTo>Deal__c</referenceTo>
    <relationshipLabel>departures dates (Linked Deal(D/O/S))</relationshipLabel>
    <relationshipName>departures_dates2</relationshipName>
    <type>Lookup</type>
</CustomField>