force-app/main/default/objects/departures_dates__c/fields/Logistics_Consulant__c.field-meta.xml
<CustomField>
    <fullName>Logistics_Consulant__c</fullName>
    <formula>Deal_for_Reporting__r.Logistics_Consulant__r.FirstName +&apos; &apos;+   Deal_for_Reporting__r.Logistics_Consulant__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logistics Consulant</label>
    <type>Text</type>
</CustomField>