force-app/main/default/objects/departures_dates__c/fields/Logistics_Date_Status__c.field-meta.xml
<CustomField>
    <fullName>Logistics_Date_Status__c</fullName>
    <label>Logistics Date Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Date Offline - BC Good to Send</fullName>
            </value>
            <value>
                <fullName>Date Offline - Minimum Numbers</fullName>
            </value>
            <value>
                <fullName>Date Offline - No Sales</fullName>
            </value>
            <value>
                <fullName>Date Offline - Cancelled by Merchant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>