force-app/main/default/objects/departures_dates__c/fields/Maximum__c.field-meta.xml
<CustomField>
    <fullName>Maximum__c</fullName>
    <inlineHelpText>Maximum group size as per deal Fine Print</inlineHelpText>
    <label>Maximum</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>