force-app/main/default/objects/departures_dates__c/fields/Maximum_LOS__c.field-meta.xml
<CustomField>
    <fullName>Maximum_LOS__c</fullName>
    <label>Maximum LOS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>