force-app/main/default/objects/departures_dates__c/fields/MERCHANT__c.field-meta.xml
<CustomField>
    <fullName>MERCHANT__c</fullName>
    <formula>IF( NOT(ISBLANK( Deal__c )) ,  Deal__r.Merchant__r.Name , IF(NOT(ISBLANK( DealID_from_Option__c )),  options__r.Deal__r.Merchant__r.Name  ,  sub_options__r.options__r.Deal__r.Merchant__r.Name  ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MERCHANT</label>
    <type>Text</type>
</CustomField>